alteracao de layout

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   font-family: "Montserrat";
+  box-sizing: border-box;
 }
 
 header {
@@ -14,14 +15,16 @@ header {
   padding: 0 2em;
   margin-bottom: 2em;
 }
+
 .logo-e-texto {
+  
   display: flex;
   align-items: center;
   font-family: "Montserrat";
   color: #5c331d;
 }
 .logo-e-texto p {
-  font-size: 0.6em;
+  font-size: 0.6rem;
 }
 .logo {
   width: 24%;
@@ -29,7 +32,7 @@ header {
 .titulo {
   display: flex;
   flex-direction: column;
-  margin-left: 1em;
+  margin-left: 1rem;
 }
 nav {
   display: flex;
@@ -65,21 +68,26 @@ nav a:visited {
 }
 
 main {
-  display: flex;
+  display: grid;
+  grid-template-columns: 9vw 1fr 1fr 1fr 1fr 9vw;
   justify-content: center;
-  flex-direction: column;
+  align-items: center;
+  row-gap: 8vh;
 }
 #promocao {
   width: 80vw;
+
   margin: auto;
+  grid-column: 2/5;
   display: flex;
   justify-content: center;
-  background-color: #5c331d;
+  align-items: center;
+  
   flex-direction: column;
 }
 #promocao img {
   border-radius: 16px;
-  /* z-index: 1; */
+  max-width: 82vw;
 }
 .titulo-promocao {
   position: absolute;
@@ -101,46 +109,61 @@ main {
   font-family: "Montserrat";
   -webkit-text-stroke: 1px grey;
 }
-.produtos-quemSomos {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  row-gap: 4vh;
-}
 
 #produtos {
-  display: flex;
-  justify-content: center;
-  margin-top: 5vh;
-  grid-column: 1/5;
-  height: fit-content;
+  grid-column: 2/6;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  /* margin: 5vh 8vh 0vh 8vh; */
+  column-gap: 20px;
+  /* height: fit-content; */
 }
 .categorias {
-  margin: 0 2vw;
+  grid-column: 2/6;
   background-color: hotpink;
   height: 24vh;
-  width: 24vw;
 }
-
+#alimentos {
+  grid-column: 1/2;
+}
+#bebidas {
+  grid-column: 2/3;
+}
+#util-domesticas {
+  grid-column: 3/4;
+}
+#limpeza {
+  grid-column: 4/5;
+}
 #quem-somos {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
   color: #5c331d;
-  grid-column: 1/5;
-  margin: 0 4vh;
+  grid-column: 2/6;
+
+}
+#quem-somos div{
+  grid-column: 2/3;
 }
 #quem-somos h1 {
   font-size: 4em;
   margin-bottom: 1em;
+  text-align: center;
 }
 #quem-somos p {
-  font-size: 2em;
+  font-size: 1.3rem;
   text-align: justify;
 }
+
 #quem-somos img {
-  width: auto;
-  height: 66vh;
+  max-width: 40vw;
   margin-right: 3em;
   border-radius: 16px;
 }
+
+/***** SECTION FAQ *****/
+
 
 /***** FOOTER *****/
 footer {
@@ -161,6 +184,34 @@ footer {
 a {
   text-decoration: none;
 }
-/* .mapa {
-  width: ;
-} */
+
+/*FAQ*/
+.perguntas-frequentes,
+input {
+  display: none;
+}
+
+/* Texto exibido quando o checkbox não estiver marcado. */
+input + label:before {
+  background-image: url("https://icons-for-free.com/iconfiles/png/512/arrow+essential+right+ui+icon-1320166506597285947.png");
+  background-size: 10px 10px;
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  content: "";
+}
+
+/* Texto exibido quando o checkbox estiver marcado. */
+input:checked + label:before {
+  background-image: url("https://icons-for-free.com/iconfiles/png/512/arrow+down+essential+ui+icon-1320166506450388543.png");
+  background-size: 10px 10px;
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  content: "";
+}
+
+/* Exibe o elemento de ID 'bandeiras' quando o checkbox estiver marcado. */
+input:checked ~ .perguntas-frequentes {
+  display: block;
+}
